--- a/facapedidos/application/modules/portal/views/scripts/index/index.phtml
+++ b/facapedidos/application/modules/portal/views/scripts/index/index.phtml
@@ -1,7 +1,7 @@
 <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 
-    <link type="text/css" href="/css/style.css" rel="stylesheet" />
+    <link type="text/css" href="/css/portal.css" rel="stylesheet" />
 
 
 </head>
@@ -100,8 +100,8 @@
 	    {
 		 echo "<div style='float: left; margin: 60px 1px 20px 21px; width:150px;'> \n";
 		 echo "<a class='botao_portal_amarelo' target='' title='Fechada nesse horário' href='#'>
-		 <span>Fechada nesse horário</span></a> Clique no botão se deseja enviar à loja sua vontade
-		 de que ela estivesse aberta.</div>";
+		 <span>Fechada nesse horário</span></a> <span class='msg_estabelecimento_fechado'>Clique no botão se deseja enviar à loja sua vontade
+		 de que ela estivesse aberta.</span></div>";
 
 	    }
 
