--- a/facapedidos/application/modules/estabelecimento/views/scripts/produto/index.phtml
+++ b/facapedidos/application/modules/estabelecimento/views/scripts/produto/index.phtml
@@ -356,7 +356,8 @@
                                         </td>
 
                                         <td>
-                                            <a href="#" onclick="savePromocao('<?php echo $v['cod_promocao'] ?>')">Salvar</a>  &nbsp;&nbsp; <a href="#" onclick="delPromocao('<?php echo $v['cod_promocao'] ?>')">Delete</a>
+                                            <!-- Melhor nao deixar editar uma promocao ja cadastrada <a href="#" onclick="savePromocao('<?php //echo $v['cod_promocao'] ?>')">Salvar</a> -->
+					    &nbsp;&nbsp; <a href="#" onclick="delPromocao('<?php echo $v['cod_promocao'] ?>')">Delete</a>
                                         </td>
                                     </tr>
 
