--- a/facapedidos/application/modules/portal/views/scripts/index/index.phtml
+++ b/facapedidos/application/modules/portal/views/scripts/index/index.phtml
@@ -13,11 +13,11 @@
             <h2>Entre com os critérios de pesquisa.</h2> 
 
             <div style="text-align: left; border: transparent; width: 380px; ">
-            Ex:  macarrão, massa verde, "Macarronada da Tia Dalva" 
-            <br>
-            Ex: catupiri, bacon, peito de peru
+		Ex:  macarrão, massa verde, "Macarronada da Tia Dalva"
+		<br>
+		Ex: catupiri, bacon, peito de peru
             </div>
-            
+
             <br>
             <input type="textarea" name="criterio" style="width: 400px;" value="<?php echo $this->pesquisa_facapedido_criterio; ?>">
             <br>
@@ -26,28 +26,28 @@
             <br><br>
 
             <div style="width:450; height: 100;">
-            <?php
-            //formData2 eh um array comecando do indice 0 e contendo os codigos de tipos de produtos que a empresa trabalha
-            //cod_tipo_produto é um array cujo indices sao os cod_tipo_produto e o conteudo o nome do tipo. Contem todos os tipos produtos existentes.
-            $i = 0;
-            foreach (array_keys($this->cod_tipo_produto) as $cod_tipo_produto)
-            {
-		$checked = " ";
-		if(!empty($this->pesquisa_facapedido_tipo_produto) && in_array($cod_tipo_produto,$this->pesquisa_facapedido_tipo_produto))
+		<?php
+		//formData2 eh um array comecando do indice 0 e contendo os codigos de tipos de produtos que a empresa trabalha
+		//cod_tipo_produto é um array cujo indices sao os cod_tipo_produto e o conteudo o nome do tipo. Contem todos os tipos produtos existentes.
+		$i = 0;
+		foreach (array_keys($this->cod_tipo_produto) as $cod_tipo_produto)
 		{
-		    $checked = "checked";
-		}
-            ?>
-		<input  type="checkbox" name="cod_tipo_produto[]" <?php echo $checked; ?> value="<?php echo $cod_tipo_produto ?>" class=""> <?php echo $this->cod_tipo_produto[$cod_tipo_produto] ?>
-     
-           <?php } ?>
-           </div>
+		    $checked = " ";
+		    if (!empty($this->pesquisa_facapedido_tipo_produto) && in_array($cod_tipo_produto, $this->pesquisa_facapedido_tipo_produto))
+		    {
+			$checked = "checked";
+		    }
+		?>
+    		<input  type="checkbox" name="cod_tipo_produto[]" <?php echo $checked; ?> value="<?php echo $cod_tipo_produto ?>" class=""> <?php echo $this->cod_tipo_produto[$cod_tipo_produto] ?>
 
-           Caloria < que: <input type="text" name="caloria" style="width:50" value="<?php echo $this->pesquisa_facapedido_caloria; ?>">
+		<?php } ?>
+	    </div>
+
+	    Caloria < que: <input type="text" name="caloria" style="width:50" value="<?php echo $this->pesquisa_facapedido_caloria; ?>">
 
 
 
-           <br><br><br>
+	    <br><br><br>
             <input type="submit" value="Pesquisar">
 
         </form>
@@ -58,55 +58,70 @@
 
 
 <?php
-
-	 
-	 for ($i = 0; $i < sizeof($this->resultado); $i++)
-         //foreach ((array) $this->resultado as $hit)
-         {
-	    //$hit = $this->resultado->fetch(PDO::FETCH_ASSOC);
+		for ($i = 0; $i < sizeof($this->resultado); $i++)
+		//foreach ((array) $this->resultado as $hit)
+		{
+		    //$hit = $this->resultado->fetch(PDO::FETCH_ASSOC);
 
 
-            echo "<div style=' clear:both; margin: 80px; color:black;' > \n";
-            echo "<div style='float: left; margin: 20px 1px 20px 21px; width:200px;'><p><img src='/portal/index/get-Imagem-Produto/id/".$this->resultado[$i]['cod_foto']."' width='141' height='auto' alt=''> </p> </div> \n";
-            echo "<div style='float: left; margin: 50px 1px 20px 21px; width:100px; font-size: large;'> <p style='display: block' > \n";
-            echo $this->resultado[$i]["nome"];
-            echo "</p> </div> <!-- nome do produto --> \n";                     
-            echo "<div style='float: left; margin: 60px 1px 20px 80px; width:150px; font-size: medium;'> \n";
-            echo $this->resultado[$i]["nome_empresa"];
-            echo "</div> <!-- nome da empresa --> \n";
-            //imprime os tamanhos disponiveis e precos do produto
-	    echo "<div style='float: left; margin: 60px 1px 20px 80px; width:200px; font-size: medium;'> \n";
-	    echo $this->resultado[$i]['tamanho']." => ".$this->resultado[$i]["preco"];
-	    $i++;
-	    while($this->resultado[$i]['cod_produto'] == $this->resultado[$i-1]['cod_produto'])
-	    {
-		echo "<br> \n";		
-		echo $this->resultado[$i]['tamanho']." => ".$this->resultado[$i]["preco"];
-		$i++;
-	    }
-	    $i--;
-	    echo "</div> <!-- precos -->";
+		    echo "<div style=' clear:both; margin: 80px; color:black;' > \n";
+		    echo "<div style='float: left; margin: 20px 1px 20px 21px; width:200px;'><p><img src='/portal/index/get-Imagem-Produto/id/" . $this->resultado[$i]['cod_foto'] . "' width='141' height='auto' alt=''> </p> </div> \n";
+		    echo "<div style='float: left; margin: 50px 1px 20px 21px; width:100px; font-size: large;'> <p style='display: block' > \n";
+		    echo $this->resultado[$i]["nome"];
+		    echo "</p> </div> <!-- nome do produto --> \n";
+		    echo "<div style='float: left; margin: 60px 1px 20px 80px; width:150px; font-size: medium;'> \n";
+		    echo $this->resultado[$i]["nome_empresa"];
+		    echo "</div> <!-- nome da empresa --> \n";
+		    //imprime os tamanhos disponiveis e precos do produto
+		    echo "<div style='float: left; margin: 60px 1px 20px 80px; width:200px; font-size: medium;'> \n";
+		    if (!empty($this->resultado[$i]['preco_promocional']))
+		    {
+			echo ($this->resultado[$i]['tamanho']."=> De ");
+			echo $this->resultado[$i]["preco"];
+			echo (" por ");
+			echo $this->resultado[$i]["preco_promocional"];
+		    }
+		    else
+			echo $this->resultado[$i]['tamanho'] . " => " . $this->resultado[$i]["preco"];
 
-	    //verifica se a empresa esta atendendo nesse horario
-	    $hora_atual = date('H').":".date('i').":00";
+		    $i++;
+		    while ($this->resultado[$i]['cod_produto'] == $this->resultado[$i - 1]['cod_produto'])
+		    {
+			echo "<br> \n";
 
-	    if(strtotime($hora_atual) >= strtotime($this->resultado[$i]['hora_inicio']) && strtotime($hora_atual) <= strtotime($this->resultado[$i]['hora_fim']))
-	    {
-		 echo "<div style='float: left; margin: 60px 1px 20px 21px; width:150px;'> \n";
-		 echo "<a class='botao_portal_vermelho' target='' title='Ir &agrave; Loja' href='#'>
-		 <span>Ir &agrave; Loja</span></a> </div>";
-	    }
-	    else
-	    {
-		 echo "<div style='float: left; margin: 60px 1px 20px 21px; width:150px;'> \n";
-		 echo "<a class='botao_portal_amarelo' target='' title='Fechada nesse horário' href='#'>
+			if (!empty($this->resultado[$i]['preco_promocional']))
+			{
+			    echo ($this->resultado[$i]['tamanho']."=> De ");
+			    echo $this->resultado[$i]["preco"];
+			    echo (" por ");
+			    echo $this->resultado[$i]["preco_promocional"];
+			}
+			else
+			    echo $this->resultado[$i]['tamanho'] . " => " . $this->resultado[$i]["preco"];
+			$i++;
+		    }
+		    $i--;
+		    echo "</div> <!-- precos -->";
+
+		    //verifica se a empresa esta atendendo nesse horario
+		    if ($this->resultado[$i]['isAberto'] == true)
+		    {
+			echo "<div style='float: left; margin: 60px 1px 20px 21px; width:150px;'> \n";
+			echo "<a class='botao_portal_vermelho' target='' title='Ir &agrave; Loja' href='http://facapedidos/" . $this->resultado[$i]['url'] . "?cod_produto=" . $this->resultado[$i]['cod_produto'] . "'>" .
+			"<span>Ir &agrave; Loja</span></a> </div>";
+		    }
+		    else
+		    {
+			$hora_atual = date('H') . ":" . date('i') . ":00";
+
+			echo "<div style='float: left; margin: 60px 1px 20px 21px; width:150px;'> \n";
+			echo "<a class='botao_portal_amarelo' target='' title='Fechada nesse horário' href='#'>
 		 <span>Fechada nesse horário</span></a> <span class='msg_estabelecimento_fechado'>Clique no botão se deseja enviar à loja sua vontade
 		 de que ela estivesse aberta.</span></div>";
+		    }
 
-	    }
-
-            echo "</div> \n";
-         }
+		    echo "</div> \n";
+		}
 ?>
 
 
