--- a/facapedidos/application/modules/portal/views/scripts/loja/index.phtml
+++ b/facapedidos/application/modules/portal/views/scripts/loja/index.phtml
@@ -6,6 +6,7 @@
 
 </head>
 
+<img src='/portal/loja/get-Logo-Empresa/id/<?php echo $this->cod_empresa?>' width='141' height='auto' alt=''>
 
 <div align="center" width="80%">
 
